methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:10: error: Boolean does not take parameters
  return vuBiscuit()
                  ^